--- a/java/whcdit-imengya/src/main/resources/application.properties
+++ b/java/whcdit-imengya/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port = 21800
+
+spring.datasource.url = jdbc:mysql://192.168.20.227:23306/mengya?useUnicode=true&characterEncoding=utf8
+spring.datasource.username = mengya
+spring.datasource.password = mengya
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+mybatis.mapper-locations = classpath:mappers/*.xml
+
+logging.level.root = INFO
+logging.level.com.whcdit = DEBUG
+logging.file.name = /whcdit-imy.log
 
