--- a/web/vue-imengya-001/package.json
+++ b/web/vue-imengya-001/package.json
@@ -14,8 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.4",
+    "echarts": "^5.2.0",
+    "element-ui": "^2.15.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^3.3.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
