--- a/java/whcdit-imengya/src/main/resources/application.properties
+++ b/java/whcdit-imengya/src/main/resources/application.properties
@@ -10,3 +10,5 @@ logging.level.root = INFO
 logging.level.com.whcdit = DEBUG
 logging.file.name = /whcdit-imy.log
 
+###数据区域ID
+mengya.data.region.id = 101
